--- a/src/views/39-page.html
+++ b/src/views/39-page.html
@@ -14,7 +14,8 @@
 					<div class="single__content">
 						<div class="single__columns">
 							<div class="single__column single__column--2">
-								<aside class="sidebar">
+								@@include("../blocks/modules/lk-menu/lk-menu.html")
+                                <aside class="sidebar lk-side">
 									<p class="title-small sidebar__title">
 										<span>Личный кабинет</span>
 									</p>
