--- a/src/views/44-page.html
+++ b/src/views/44-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>45. Оплата</title>
+    <title>44. Оплата</title>
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
@@ -14,7 +14,8 @@
                     <div class="single__content">
                         <div class="single__columns">
                             <div class="single__column single__column--2">
-                                <aside class="sidebar">
+                                @@include("../blocks/modules/lk-menu/lk-menu.html")
+                                <aside class="sidebar lk-side">
                                     <p class="title-small sidebar__title">
                                         <span>Личный кабинет</span>
                                     </p>
