--- a/src/views/47-page.html
+++ b/src/views/47-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>48. Избранное</title>
+    <title>47. Избранное</title>
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
@@ -13,7 +13,8 @@
                 <div class="container">
                     <div class="catalog__content">
                         <aside class="catalog__side">
-                            <aside class="sidebar">
+                            @@include("../blocks/modules/lk-menu/lk-menu.html")
+                            <aside class="sidebar lk-side">
                                 <p class="title-small sidebar__title">
                                     <span>Личный кабинет</span>
                                 </p>
