--- a/src/blocks/modules/intro/intro.scss
+++ b/src/blocks/modules/intro/intro.scss
@@ -1,11 +1,134 @@
-@include r(1700) {
-
-}
-@include r(1200) {
-
-}
-
 .intro {
+	&--type-1 {
+		color: $dark;
+		.intro__content {
+			background-color: $green;
+		}
+		.intro__btn {
+			background-color: $dark;
+			color: $light;
+		}
+	}
+	&--type-2 {
+		color: $light;
+		.intro__content {
+			background-color: $black;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-3 {
+		color: $light;
+		.intro__content {
+			background-color: #002278;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-4 {
+		color: $light;
+		.intro__content {
+			background-color: #363636;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-5 {
+		color: $light;
+		.intro__content {
+			background-color: #770000;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-6 {
+		color: $light;
+		.intro__content {
+			background-color: #E04F14;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-7 {
+		color: $dark;
+		.intro__content {
+			background-color: #EFAC00;
+		}
+		.intro__btn {
+			background-color: $dark;
+			color: $light;
+		}
+	}
+	&--type-8 {
+		color: $light;
+		.intro__content {
+			background-color: #115500;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-9 {
+		color: $light;
+		.intro__content {
+			background-color: #431554;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-10 {
+		color: $light;
+		.intro__content {
+			background-color: #0088EB;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-11 {
+		color: $light;
+		.intro__content {
+			background-color: #00A98B;
+		}
+		.intro__btn {
+			background-color: $light;
+			color: $black;
+		}
+	}
+	&--type-12 {
+		color: $dark;
+		.intro__content {
+			background-color: #CEB094;
+		}
+		.intro__btn {
+			background-color: $dark;
+			color: $light;
+		}
+	}
+	&--type-13 {
+		color: $dark;
+		.intro__content {
+			background-color: #AADE55;
+		}
+		.intro__btn {
+			background-color: $dark;
+			color: $light;
+		}
+	}
 	&__columns {
 		display: flex;
 		@include r(1200) {
@@ -15,13 +138,13 @@
 			min-height: 180px;
 			padding-bottom: 88px;
 			min-height: 500px;
+			background-position: center;
 		}
 		@include r(800) {
 			min-height: 0px;
 		}
 	}
 	&__content {
-		background-color: $green;
 		width: 50%;
 		padding: 115px 141px 120px 141px;
 		min-height: 636px;
@@ -40,9 +163,6 @@
 			margin-left: auto;
 			margin-right: auto;
 			max-width: 100%;
-			// position: absolute;
-			// left: 50%;
-			// transform: translateX(-50%);
 		}
 	}
 	&__thumb {
