--- a/src/blocks/modules/map/map.scss
+++ b/src/blocks/modules/map/map.scss
@@ -74,21 +74,45 @@
 	}
 	&__selects {
 		margin-bottom: 60px;
-		text-align: center;
+		display: flex;
+		justify-content: center;
 		@include r(1200) {
 			display: none;
 		}
 	}
 	&__change-floor {
-		height: 40px;
-		width: 100px;
-		text-align: center;
-		color: $light;
+		margin-right: 80px;
+		margin-left: 80px;
+		font-size: 30px;
+		position: relative;
+		text-transform: uppercase;
+		font-weight: bold;
+		background: none;
+		padding-left: 18px;
 		cursor: pointer;
 		transition: 0.3s all;
-		background-color: $dark;
 		&:hover {
 			opacity: 0.7;
+		}
+		span {
+
+		}
+		&:after {
+			content: "";
+			display: block;
+			position: absolute;
+			height: 4px;
+			bottom: 8px;
+			left: 0px;
+			width: 0%;
+			background-color: $green;
+			transition: 0.3s all;
+		}
+		&--active {
+			pointer-events: none;
+			&:after {
+				width: 100%;
+			}
 		}
 	}
 	&__nav {
