--- a/src/blocks/modules/partners/partners.scss
+++ b/src/blocks/modules/partners/partners.scss
@@ -52,6 +52,25 @@
 	@include r(1200) {
 		width: calc(100% / 6 - 8px);
 		margin-bottom: 8px;
+		display: none;
+		&:nth-child(1) {
+			display: flex;
+		}
+		&:nth-child(2) {
+			display: flex;
+		}
+		&:nth-child(3) {
+			display: flex;
+		}
+		&:nth-child(4) {
+			display: flex;
+		}
+		&:nth-child(5) {
+			display: flex;
+		}
+		&:nth-child(6) {
+			display: flex;
+		}
 	}
 	@include r(440) {
 		width: calc(100% / 3 - 8px);
