--- a/src/styles/base/_lk-ui.scss
+++ b/src/styles/base/_lk-ui.scss
@@ -2,14 +2,24 @@
 	&__title {
 		margin-bottom: 40px;
 		font-size: 20px;
+		@include r(1200) {
+			margin-bottom: 20px;
+		}
 	}
 	&__input {
 		width: 100%;
 		margin-bottom: 30px;
+		@include r(1200) {
+			margin-bottom: 15px;
+		}
 	}
 	&__text {
 		margin-bottom: 40px;
 		font-size: 20px;
+		@include r(1200) {
+			margin-bottom: 16px;
+			font-size: 16px;
+		}
 	}
 	&__btn {
 		padding-left: 63px;
@@ -22,6 +32,9 @@
 	}
 	&__section {
 		margin-bottom: 48px;
+		@include r(1200) {
+			margin-bottom: 32px;
+		}
 	}
 	&__grid {
 		display: flex;
@@ -62,8 +75,14 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
+	@include r(1200) {
+		display: block;
+	}
 	&--50 {
 		width: calc(50% - 16px);
+		@include r(1200) {
+			width: 100%;
+		}
 	}
 	&__title {
 		margin-bottom: 10px;
@@ -74,6 +93,11 @@
 		position: relative;
 		&--50 {
 			width: calc(50% - 8px);
+			@include r(1200) {
+				width: 100%;
+				margin-bottom: 5px;
+			}
+
 		}
 	}
 	&__input {
@@ -87,8 +111,15 @@
 		width: 100%;
 		color: #BDBDBD;
 		line-height: 1.2;
+		@include r(1200) {
+			font-size: 14px;
+		}
 		&--50 {
 			width: calc(50% - 8px);
+			@include r(1200) {
+				width: 100%;
+			}
+
 		}
 	}
 	&__toggle {
@@ -266,11 +297,17 @@
 .lk-info-line {
 	font-weight: bold;
 	margin-bottom: 20px;
+	@include r(1200) {
+		margin-bottom: 10px;
+	}
 	&__head {
 		font-weight: normal;
 		color: #828282;
 		display: inline-block;
 		margin-right: 20px;
+		@include r(1200) {
+			display: block;
+		}
 	}
 	a {
 		color: $green;
